--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,20 +15,20 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.16",
     "lucide-react": "^0.294.0",
-    "next": "^14.2.31",
-    "postcss": "^8.4.32",
+    "next": "^15.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "swr": "^2.2.4",
-    "tailwindcss": "^3.3.6",
     "typescript": "^5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12"
   }
 }
