--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,8 @@ psycopg2-binary==2.9.9
 pydantic==2.5.0
 pydantic-settings==2.0.3
 argon2-cffi==23.1.0
-python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 email-validator==2.1.0
 asyncpg==0.29.0
+greenlet==3.0.1
+aiosqlite==0.19.0
