--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,29 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "build-export": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "lucide-react": "^0.294.0",
-    "next": "^15.4.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.48.2",
-    "swr": "^2.2.4",
     "typescript": "^5",
-    "zod": "^3.22.4"
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "swr": "^2.2.4",
+    "zod": "^3.22.4",
+    "@hookform/resolvers": "^3.3.2",
+    "react-hook-form": "^7.48.2",
+    "lucide-react": "^0.294.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12"
+    "eslint-config-next": "14.0.3"
   }
 }
