--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,11 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
-alembic==1.12.1
 psycopg2-binary==2.9.9
 pydantic==2.5.0
-pydantic-settings==2.0.3
-argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+argon2-cffi==21.3.0
 python-multipart==0.0.6
 email-validator==2.1.0
 asyncpg==0.29.0
 greenlet==3.0.1
-aiosqlite==0.19.0
