--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,7 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 pydantic==2.5.0
-argon2-cffi-bindings==21.2.0
-argon2-cffi==21.3.0
+bcrypt==4.0.1
 python-multipart==0.0.6
 email-validator==2.1.0
 asyncpg==0.29.0
