--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,8 @@ fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-pydantic==2.5.0
+pydantic==1.10.12
 bcrypt==4.0.1
 asyncpg==0.29.0
 greenlet==3.0.1
+python-multipart==0.0.6
