--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,6 @@ fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-pydantic==2.5.0
+pydantic==2.5.0 --only-binary=pydantic
 bcrypt==4.0.1
 python-multipart==0.0.6
